--- a/Thred/Chat & Text Cells/Group Chat Cells/Picture Cells/ProductCell.xib
+++ b/Thred/Chat & Text Cells/Group Chat Cells/Picture Cells/ProductCell.xib
@@ -45,7 +45,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aOP-qQ-RiY" userLabel="Name Skeleton View" customClass="SkeletonView" customModule="Thred" customModuleProvider="target">
-                                <rect key="frame" x="55" y="20" width="320" height="30"/>
+                                <rect key="frame" x="55" y="22.666666666666671" width="320" height="27.333333333333329"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GnZ-Vd-zdh" userLabel="Full Name Masking View">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="5"/>
@@ -56,7 +56,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wPO-Th-lD7" userLabel="Username Masking View">
-                                        <rect key="frame" x="0.0" y="17.666666666666664" width="120" height="5"/>
+                                        <rect key="frame" x="0.0" y="15.333333333333332" width="120" height="5"/>
                                         <accessibility key="accessibilityConfiguration" label="Username Masking View"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="120" id="FjP-Un-Mlg"/>
@@ -67,7 +67,7 @@
                                 <constraints>
                                     <constraint firstItem="GnZ-Vd-zdh" firstAttribute="leading" secondItem="aOP-qQ-RiY" secondAttribute="leading" id="GkZ-bi-ssi"/>
                                     <constraint firstItem="wPO-Th-lD7" firstAttribute="leading" secondItem="aOP-qQ-RiY" secondAttribute="leading" id="h4Y-X0-fvO"/>
-                                    <constraint firstItem="wPO-Th-lD7" firstAttribute="top" secondItem="GnZ-Vd-zdh" secondAttribute="bottom" constant="12.5" id="n7S-n5-OoD"/>
+                                    <constraint firstItem="wPO-Th-lD7" firstAttribute="top" secondItem="GnZ-Vd-zdh" secondAttribute="bottom" constant="10.5" id="n7S-n5-OoD"/>
                                     <constraint firstItem="wPO-Th-lD7" firstAttribute="height" secondItem="GnZ-Vd-zdh" secondAttribute="height" id="pTf-jQ-kC5"/>
                                     <constraint firstItem="GnZ-Vd-zdh" firstAttribute="top" secondItem="aOP-qQ-RiY" secondAttribute="top" id="xN6-Vh-QRd"/>
                                 </constraints>
@@ -81,15 +81,15 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Full Name&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pSf-TM-jQ0">
                                 <rect key="frame" x="52.666666666666657" y="14.999999999999998" width="312.33333333333337" height="16.333333333333329"/>
                                 <accessibility key="accessibilityConfiguration" identifier="picFullname"/>
-                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="&quot;@username&quot;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0m4-jT-kf8">
-                                <rect key="frame" x="52.666666666666657" y="31.333333333333332" width="312.33333333333337" height="14.666666666666668"/>
+                                <rect key="frame" x="52.666666666666657" y="28.999999999999996" width="312.33333333333337" height="15.333333333333332"/>
                                 <accessibility key="accessibilityConfiguration" identifier="picUsername"/>
-                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="13"/>
-                                <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="13"/>
+                                <color key="textColor" systemColor="tertiaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oeL-mu-0pN">
@@ -111,7 +111,7 @@
                             <constraint firstItem="0m4-jT-kf8" firstAttribute="leading" secondItem="cL0-7U-szH" secondAttribute="trailing" constant="7.5" id="8Ny-NV-qxa"/>
                             <constraint firstAttribute="trailing" secondItem="pSf-TM-jQ0" secondAttribute="trailing" constant="10" id="Awc-zM-l3h"/>
                             <constraint firstItem="pSf-TM-jQ0" firstAttribute="top" secondItem="kwj-hw-CJE" secondAttribute="top" constant="15" id="D1e-NM-ka0"/>
-                            <constraint firstItem="0m4-jT-kf8" firstAttribute="top" secondItem="pSf-TM-jQ0" secondAttribute="bottom" id="Fem-Tx-iWQ"/>
+                            <constraint firstItem="0m4-jT-kf8" firstAttribute="top" secondItem="pSf-TM-jQ0" secondAttribute="bottom" constant="-2.5" id="Fem-Tx-iWQ"/>
                             <constraint firstAttribute="trailing" secondItem="0m4-jT-kf8" secondAttribute="trailing" constant="10" id="HQe-wF-diM"/>
                             <constraint firstAttribute="bottom" secondItem="mw1-AG-O0b" secondAttribute="bottom" constant="2.5" id="JIO-ik-dJg"/>
                             <constraint firstItem="cL0-7U-szH" firstAttribute="leading" secondItem="kwj-hw-CJE" secondAttribute="leading" constant="10" id="N5s-o7-TMS"/>
@@ -122,7 +122,7 @@
                             <constraint firstAttribute="trailing" secondItem="oeL-mu-0pN" secondAttribute="trailing" constant="10" id="TbW-AM-iqT"/>
                             <constraint firstAttribute="height" constant="50" id="hOu-PT-tRt"/>
                             <constraint firstItem="oeL-mu-0pN" firstAttribute="top" secondItem="kwj-hw-CJE" secondAttribute="top" constant="10" id="irl-kn-Zzt"/>
-                            <constraint firstItem="aOP-qQ-RiY" firstAttribute="top" secondItem="kwj-hw-CJE" secondAttribute="top" constant="20" id="pbn-r7-c8p"/>
+                            <constraint firstItem="aOP-qQ-RiY" firstAttribute="top" secondItem="kwj-hw-CJE" secondAttribute="top" constant="22.5" id="pbn-r7-c8p"/>
                             <constraint firstItem="mw1-AG-O0b" firstAttribute="top" secondItem="kwj-hw-CJE" secondAttribute="top" constant="12.5" id="tPi-uU-Wql"/>
                             <constraint firstAttribute="trailing" secondItem="aOP-qQ-RiY" secondAttribute="trailing" id="teg-DQ-QS2"/>
                             <constraint firstItem="mw1-AG-O0b" firstAttribute="leading" secondItem="kwj-hw-CJE" secondAttribute="leading" constant="10" id="u00-Bd-MTj"/>
@@ -141,15 +141,13 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="TO4-oZ-Ckh">
                                                 <rect key="frame" x="0.0" y="0.0" width="355" height="35"/>
                                                 <subviews>
-                                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Title&quot;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="XUp-PP-Cop">
-                                                        <rect key="frame" x="0.0" y="0.0" width="175" height="35"/>
-                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="&quot;Title&quot;" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fhb-u8-0ml">
+                                                        <rect key="frame" x="0.0" y="0.0" width="175.66666666666666" height="35"/>
                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="25"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Timestamp&quot;" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MpD-rw-TRb">
-                                                        <rect key="frame" x="175" y="0.0" width="180" height="35"/>
+                                                        <rect key="frame" x="175.66666666666663" y="0.0" width="179.33333333333337" height="35"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="d3u-qz-r4y"/>
@@ -299,7 +297,7 @@
                 <outlet property="productDescription" destination="9vJ-jq-xDm" id="VEw-jb-bY6"/>
                 <outlet property="productPicture" destination="aN6-3V-AT0" id="6Le-R4-HJD"/>
                 <outlet property="timestampLbl" destination="MpD-rw-TRb" id="bdw-6P-KAk"/>
-                <outlet property="title" destination="XUp-PP-Cop" id="xxU-lr-8fT"/>
+                <outlet property="title" destination="Fhb-u8-0ml" id="gmi-jG-3Jl"/>
                 <outlet property="userImage" destination="cL0-7U-szH" id="8IE-rM-foW"/>
                 <outlet property="userInfoView" destination="kwj-hw-CJE" id="InD-01-VQ8"/>
                 <outlet property="username" destination="0m4-jT-kf8" id="p2a-uS-DJI"/>
@@ -314,7 +312,7 @@
         <image name="ellipsis" width="33.333332061767578" height="33.333332061767578"/>
         <image name="like" width="366.66665649414062" height="366.66665649414062"/>
         <namedColor name="LoadingColor">
-            <color red="0.090000003576278687" green="0.75" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="0.090000003576278687" green="0.75" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
