--- a/Thred/ExploreColorCell.xib
+++ b/Thred/ExploreColorCell.xib
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Nexa W01 Heavy.ttf">
+            <string>NexaW01-Heavy</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExploreColorCell" customModule="Thred" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExploreColorCell" rowHeight="176" id="KGk-i7-Jjw" customClass="ExploreColorCell" customModule="Thred" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExploreColorCell" rowHeight="175" id="KGk-i7-Jjw" customClass="ExploreColorCell" customModule="Thred" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="176"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -47,7 +52,34 @@
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0gs-2Q-qsK">
                                                 <rect key="frame" x="50" y="0.0" width="260" height="45"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="Qau-Uj-3FB">
+                                                        <rect key="frame" x="0.0" y="5" width="260" height="40"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Color Name&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3I-2o-r2O">
+                                                                <rect key="frame" x="0.0" y="0.0" width="191" height="40"/>
+                                                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
+                                                                <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRl-Yf-NUP">
+                                                                <rect key="frame" x="220" y="0.0" width="40" height="40"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" secondItem="eRl-Yf-NUP" secondAttribute="height" multiplier="1:1" id="4zf-is-sSf"/>
+                                                                </constraints>
+                                                                <color key="tintColor" systemColor="systemFillColor" red="0.47058823529999999" green="0.47058823529999999" blue="0.50196078430000002" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <state key="normal" image="arrowBtn"/>
+                                                            </button>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="Qau-Uj-3FB" firstAttribute="leading" secondItem="0gs-2Q-qsK" secondAttribute="leading" id="8Yn-ZJ-v0T"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Qau-Uj-3FB" secondAttribute="bottom" id="HMe-Vu-DTP"/>
+                                                    <constraint firstItem="Qau-Uj-3FB" firstAttribute="top" secondItem="0gs-2Q-qsK" secondAttribute="top" constant="5" id="Hu8-27-Rvz"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Qau-Uj-3FB" secondAttribute="trailing" id="LED-Xi-UuS"/>
+                                                </constraints>
                                             </view>
                                         </subviews>
                                     </stackView>
@@ -56,12 +88,12 @@
                                 <constraints>
                                     <constraint firstItem="Zgc-1e-fHm" firstAttribute="top" secondItem="pKK-OU-9Zz" secondAttribute="top" id="Ba6-vI-fq1"/>
                                     <constraint firstAttribute="trailing" secondItem="Zgc-1e-fHm" secondAttribute="trailing" id="MBY-19-5HN"/>
+                                    <constraint firstAttribute="height" constant="45" id="U3D-ig-IoP"/>
                                     <constraint firstItem="Zgc-1e-fHm" firstAttribute="leading" secondItem="pKK-OU-9Zz" secondAttribute="leading" id="ae6-H5-TfV"/>
-                                    <constraint firstAttribute="height" constant="45" id="mFI-e3-dsD"/>
                                     <constraint firstAttribute="bottom" secondItem="Zgc-1e-fHm" secondAttribute="bottom" id="sZB-QN-Mfl"/>
                                 </constraints>
                             </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="V81-Or-IWx">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" bouncesZoom="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="V81-Or-IWx">
                                 <rect key="frame" x="0.0" y="50" width="310" height="126"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="2" minimumInteritemSpacing="2" id="7Rn-Ma-yqa" customClass="ExplorePageFlowLayout" customModule="Thred" customModuleProvider="target">
@@ -75,6 +107,7 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="V81-Or-IWx" secondAttribute="bottom" id="HVF-dC-1lA"/>
                             <constraint firstAttribute="trailing" secondItem="V81-Or-IWx" secondAttribute="trailing" id="NP4-6J-Ld5"/>
+                            <constraint firstItem="V81-Or-IWx" firstAttribute="top" secondItem="pKK-OU-9Zz" secondAttribute="bottom" constant="5" id="hsc-Vi-MLP"/>
                         </constraints>
                     </stackView>
                 </subviews>
@@ -91,8 +124,12 @@
             <connections>
                 <outlet property="collectionView" destination="V81-Or-IWx" id="XUs-QC-QZL"/>
                 <outlet property="colorIcon" destination="Qdc-PH-8A8" id="Lbi-42-2bH"/>
+                <outlet property="colorNameLbl" destination="f3I-2o-r2O" id="hxV-I1-zte"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="81.696428571428569"/>
+            <point key="canvasLocation" x="131.25" y="81.338028169014081"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="arrowBtn" width="30" height="30"/>
+    </resources>
 </document>
