--- a/Thred/FeedView/User Search/Search Table/SearchUserTableViewCell.xib
+++ b/Thred/FeedView/User Search/Search Table/SearchUserTableViewCell.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchUserTableViewCell" customModule="Artachat" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchUserTableViewCell" customModule="Thred" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="search" rowHeight="73" id="KGk-i7-Jjw" customClass="SearchUserTableViewCell" customModule="Artachat" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="search" rowHeight="55" id="KGk-i7-Jjw" customClass="SearchUserTableViewCell" customModule="Thred" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="357" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -16,26 +17,26 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="env-Mh-XPY">
-                        <rect key="frame" x="20" y="10" width="175.5" height="50"/>
+                        <rect key="frame" x="20" y="10" width="145.5" height="40"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mqQ-Fg-wIq">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="mqQ-Fg-wIq" secondAttribute="height" id="7Vp-3s-Oba"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="acR-Rl-45v">
-                                <rect key="frame" x="60" y="0.0" width="115.5" height="50"/>
+                                <rect key="frame" x="50" y="0.0" width="95.5" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Full Name&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="itN-mH-4cW">
-                                        <rect key="frame" x="0.0" y="0.0" width="115.5" height="25"/>
-                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="95.5" height="20"/>
+                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;@username&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAy-KT-eTd">
-                                        <rect key="frame" x="0.0" y="25" width="115.5" height="25"/>
-                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="20" width="95.5" height="20"/>
+                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="14"/>
                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -46,7 +47,7 @@
                             </stackView>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="height" priority="999" constant="50" id="5HU-rX-y28"/>
+                            <constraint firstAttribute="height" priority="999" constant="40" id="5HU-rX-y28"/>
                             <constraint firstItem="mqQ-Fg-wIq" firstAttribute="height" secondItem="acR-Rl-45v" secondAttribute="height" id="H0D-Hf-f53"/>
                         </constraints>
                     </stackView>
@@ -55,7 +56,6 @@
                 <constraints>
                     <constraint firstItem="env-Mh-XPY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="1el-dC-wRQ"/>
                     <constraint firstItem="env-Mh-XPY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="5bF-S7-JNq"/>
-                    <constraint firstAttribute="bottom" secondItem="env-Mh-XPY" secondAttribute="bottom" constant="10" id="dWr-5C-ove"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="env-Mh-XPY" secondAttribute="trailing" id="pRo-gt-5Q5"/>
                 </constraints>
             </tableViewCellContentView>
@@ -65,7 +65,7 @@
                 <outlet property="userImageView" destination="mqQ-Fg-wIq" id="SUe-D5-4uQ"/>
                 <outlet property="usernameLbl" destination="aAy-KT-eTd" id="9Lx-QM-yOO"/>
             </connections>
-            <point key="canvasLocation" x="163.04347826086959" y="118.86160714285714"/>
+            <point key="canvasLocation" x="163.04347826086959" y="118.52678571428571"/>
         </tableViewCell>
     </objects>
 </document>
