--- a/Thred/ProfileViews/ProfileHeaderView.xib
+++ b/Thred/ProfileViews/ProfileHeaderView.xib
@@ -7,16 +7,39 @@
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Nexa W01 Heavy.ttf">
+            <string>NexaW01-Heavy</string>
+        </array>
+        <array key="Nexa W01 Regular.ttf">
+            <string>NexaW01-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileHeaderView" customModule="Thred" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" interfaceStyle="light" id="0N2-d2-UYm" customClass="ProfileHeaderView" customModule="Thred" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="314"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="376"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p6k-MY-udt">
-                    <rect key="frame" x="10" y="54.333333333333329" width="355" height="249.66666666666669"/>
+                    <rect key="frame" x="10" y="54.333333333333343" width="355" height="311.66666666666663"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2UV-it-LmA">
+                            <rect key="frame" x="315" y="5" width="35" height="35"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="35" id="15H-Va-qLF"/>
+                                <constraint firstAttribute="width" secondItem="2UV-it-LmA" secondAttribute="height" multiplier="1:1" id="ZCB-iv-QcN"/>
+                            </constraints>
+                            <color key="tintColor" name="LoadingColor"/>
+                            <state key="normal" image="gear"/>
+                        </button>
+                    </subviews>
                     <color key="backgroundColor" name="ProfileMask"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="2UV-it-LmA" secondAttribute="trailing" constant="5" id="nus-Ev-LlH"/>
+                        <constraint firstItem="2UV-it-LmA" firstAttribute="top" secondItem="p6k-MY-udt" secondAttribute="top" constant="5" id="p9W-Pi-vfk"/>
+                    </constraints>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_DP.png" translatesAutoresizingMaskIntoConstraints="NO" id="EhI-4W-1kM">
                     <rect key="frame" x="143" y="10" width="89" height="88.666666666666671"/>
@@ -26,20 +49,20 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jzB-Bu-MVL">
-                    <rect key="frame" x="54.333333333333343" y="108.66666666666667" width="266.33333333333326" height="175.33333333333331"/>
+                    <rect key="frame" x="54.333333333333343" y="108.66666666666667" width="266.33333333333326" height="237.33333333333331"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0qx-Ji-Vsg">
                             <rect key="frame" x="0.0" y="0.0" width="266.33333333333331" height="35"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Full Name&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="fP5-xX-6Mz">
                                     <rect key="frame" x="0.0" y="0.0" width="266.33333333333331" height="17.666666666666668"/>
-                                    <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                                    <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;@username&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="Dak-Hv-czS">
                                     <rect key="frame" x="0.0" y="17.666666666666657" width="266.33333333333331" height="17.333333333333329"/>
-                                    <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="14"/>
+                                    <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="14"/>
                                     <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -50,23 +73,21 @@
                             </constraints>
                         </stackView>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="&quot;Bio&quot;" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgd-gl-KIz">
-                            <rect key="frame" x="0.0" y="44.999999999999986" width="266.33333333333331" height="60.333333333333329"/>
+                            <rect key="frame" x="0.0" y="44.999999999999979" width="266.33333333333331" height="74.666666666666686"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="AdQ-RT-hLp"/>
-                            </constraints>
-                            <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
+                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                            <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4ka-kY-j36">
-                            <rect key="frame" x="0.0" y="115.33333333333331" width="266.33333333333331" height="60"/>
+                            <rect key="frame" x="0.0" y="129.66666666666669" width="266.33333333333331" height="60"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrF-NM-2Mo">
                                     <rect key="frame" x="0.0" y="7.6666666666666572" width="266.33333333333331" height="45"/>
                                     <color key="backgroundColor" systemColor="quaternarySystemFillColor" red="0.4549019608" green="0.4549019608" blue="0.50196078430000002" alpha="0.080000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
                                     <state key="normal" title="Button">
-                                        <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="titleColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
                                 </button>
                             </subviews>
@@ -78,6 +99,62 @@
                                 <constraint firstItem="hrF-NM-2Mo" firstAttribute="centerY" secondItem="4ka-kY-j36" secondAttribute="centerY" id="hF2-H9-Kya"/>
                             </constraints>
                         </view>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="NbL-71-bLc">
+                            <rect key="frame" x="0.0" y="199.66666666666663" width="266.33333333333331" height="37.666666666666657"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="rUE-lC-Agz">
+                                    <rect key="frame" x="0.0" y="0.0" width="82" height="37.666666666666664"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbC-7c-bmr">
+                                            <rect key="frame" x="0.0" y="0.0" width="82" height="20"/>
+                                            <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="37M-NH-M7G">
+                                            <rect key="frame" x="0.0" y="20" width="82" height="17.666666666666671"/>
+                                            <fontDescription key="fontDescription" name="NexaW01-Regular" family="NexaW01-Regular" pointSize="15"/>
+                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="typ-qS-NSy">
+                                    <rect key="frame" x="92" y="0.0" width="82.333333333333314" height="37.666666666666664"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HeG-dF-8rh">
+                                            <rect key="frame" x="0.0" y="0.0" width="82.333333333333329" height="20"/>
+                                            <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="opB-gL-H1F">
+                                            <rect key="frame" x="0.0" y="20" width="82.333333333333329" height="17.666666666666671"/>
+                                            <fontDescription key="fontDescription" name="NexaW01-Regular" family="NexaW01-Regular" pointSize="15"/>
+                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="nNN-nL-4ty">
+                                    <rect key="frame" x="184.33333333333331" y="0.0" width="82" height="37.666666666666664"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qge-BZ-JCV">
+                                            <rect key="frame" x="0.0" y="0.0" width="82" height="20"/>
+                                            <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Posts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Tgv-6z-FEI">
+                                            <rect key="frame" x="0.0" y="20" width="82" height="17.666666666666671"/>
+                                            <fontDescription key="fontDescription" name="NexaW01-Regular" family="NexaW01-Regular" pointSize="15"/>
+                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                        </stackView>
                     </subviews>
                 </stackView>
             </subviews>
@@ -104,16 +181,24 @@
             <connections>
                 <outlet property="actionBtn" destination="hrF-NM-2Mo" id="NS5-mM-qPD"/>
                 <outlet property="bioView" destination="mgd-gl-KIz" id="U8h-ih-gOP"/>
+                <outlet property="followerNum" destination="HeG-dF-8rh" id="wFG-uE-dTJ"/>
+                <outlet property="followingNum" destination="KbC-7c-bmr" id="RXQ-tw-SVK"/>
                 <outlet property="fullnameLbl" destination="fP5-xX-6Mz" id="SXe-AG-2EN"/>
+                <outlet property="optionBtn" destination="2UV-it-LmA" id="tyG-T4-XuE"/>
+                <outlet property="postNum" destination="qge-BZ-JCV" id="RCi-XV-dv8"/>
                 <outlet property="profileImgView" destination="EhI-4W-1kM" id="Tfa-El-Imh"/>
                 <outlet property="userContentView" destination="p6k-MY-udt" id="iPU-7e-qGR"/>
                 <outlet property="usernameLbl" destination="Dak-Hv-czS" id="iIs-S9-t3M"/>
             </connections>
-            <point key="canvasLocation" x="-424.80000000000001" y="-289.65517241379314"/>
+            <point key="canvasLocation" x="-316" y="-266.74876847290642"/>
         </view>
     </objects>
     <resources>
         <image name="default_DP.png" width="564" height="564"/>
+        <image name="gear" width="30" height="30"/>
+        <namedColor name="LoadingColor">
+            <color red="0.090000003576278687" green="0.75" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="ProfileMask">
             <color red="0.85900002717971802" green="0.86699998378753662" blue="0.86699998378753662" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
